Fix space distribution in header to fit the whole name on small screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -24,7 +24,7 @@ a {
   grid-template:
     "logo name maple"
   ;
-  grid-template-columns: 100px 1fr;
+  grid-template-columns: 100px 1fr min-content;
   grid-template-rows: 100px;
   gap: 20px;
   margin-bottom: 10px;
